Fix omnibox flickering on macOS Sierra.

The implementation of -[AutocompleteTextFieldEditor interpretKeyEvents:]
invalidates layout twice, in ways that are somehow not compatible on macOS
Sierra. This causes repaints on the next two frames, the first of which does
not paint the text correctly. Forcing an explicit relayout causes there to be
only a single repaint, with the correct contents.

BUG=634318

Review-Url: https://codereview.chromium.org/2237003004
Cr-Commit-Position: refs/heads/master@{#411495}

Former-commit-id: c95767396148abe3e0b7d2ac07262a90dd76a6ae